<resources>
    <string name="app_name">Habitter</string>
    <string name="noHabit">No habits yet.\nAdd a habit using the + button.</string>
    <string name="allFinished">no unfinished habits.\nGood job!</string>
    <string name="habitList">Habit list</string>
    <string name="addBtn">Add habit</string>
    <string name="filterBtn">Select habits to display</string>
    <string name="settingsBtn">Settings</string>
    <string name="noImage">Image</string>
    <string name="save">Save</string>
    <string name="habit">Habit</string>
    <string name="habitHint">Enter what you want to make a habit</string>
    <string name="remind">Reminder</string>
    <string name="deleteReminder1">Delete first reminder</string>
    <string name="deleteReminder2">Delete second reminder</string>
    <string name="deleteReminder3">Delete third reminder</string>
    <string name="addRemind">Add reminder　+</string>
    <string name="icon">Icon</string>
    <string name="iconImageView">Icon image</string>
    <string name="changeIcon">Change icon</string>
    <string name="color">Color</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="pink">Pink</string>
    <string name="blue">Blue</string>
    <string name="lightBlue">Light Blue</string>
    <string name="green">Green</string>
    <string name="yellowGreen">Yellow green</string>
    <string name="purple">Purple</string>
    <string name="brawn">Brawn</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="message">Reminder message</string>
    <string name="messageHint">Enter a message</string>
    <string name="cancelMessage">Delete the message</string>
    <string name="addMessage">Add message +</string>
    <string name="comment">Comments after completing the habit</string>
    <string name="cancelComment1">Delete first comment</string>
    <string name="cancelComment2">Delete second comment</string>
    <string name="cancelComment3">Delete third comment</string>
    <string name="commentHint">Enter a comment</string>
    <string name="addComment">Add comment +</string>
    <string name="delete">Delete the habit</string>
    <string name="nextMonth">Next month</string>
    <string name="previousMonth">Previous month</string>
    <string name="back">Back</string>
    <string name="edit">Edit the habit</string>
    <string name="howToUse">How to use this app</string>
    <string name="writeReview">Write a review</string>
    <string name="privacyPolicy">Privacy policy</string>
    <string name="reportBugs">Report bugs</string>
    <string name="ad_banner_list">ca-app-pub-</string>
    <string name="ad_banner_edit">ca-app-pub-</string>
    <string name="ad_banner_habit">ca-app-pub-</string>
</resources>