<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HabitListActivity"
    android:clipChildren="false"
    android:id="@+id/habitListLayout"
    android:background="#E6FAFB">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clipToPadding="false"
        android:paddingBottom="80dp"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <ImageView
            android:id="@+id/noImage"
            android:layout_width="200dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginBottom="-30dp"
            android:contentDescription="@string/noImage"
            app:srcCompat="@drawable/relax" />

        <TextView
            android:id="@+id/noText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/noHabit" />

        <TextView
            android:id="@+id/allFinishText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/allFinished" />

    </LinearLayout>

    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="100dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/add_icon"
        android:backgroundTint="#5FF3FF"
        android:contentDescription="Add" />-->

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#ffffff"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start">

                <TextView
                    android:id="@+id/ToolbarTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:text="@string/habitList"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/addBtn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:background="#00ffffff"
                    android:contentDescription="@string/addBtn"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    app:srcCompat="@drawable/add_icon" />

                <ImageButton
                    android:id="@+id/filterBtn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:background="#00ffffff"
                    android:contentDescription="@string/filterBtn"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    app:srcCompat="@drawable/filter_icon" />

                <ImageButton
                    android:id="@+id/settingBtn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="12dp"
                    android:background="#00ffffff"
                    android:contentDescription="@string/settingsBtn"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    app:srcCompat="@drawable/icon_settings" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView_list"
            ads:adSize="BANNER"
            ads:adUnitId="@string/ad_banner_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>