<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6FAFB"
    android:id="@+id/main_layout"
    tools:context=".MyHabitActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="英語学習"
                android:textSize="20sp"
                android:ellipsize="end"
                android:layout_marginTop="24dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:maxWidth="230dp"
                android:gravity="center"
                android:maxLines="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/frameHabit"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <ProgressBar
                    android:id="@+id/progressbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:indeterminateOnly="false"
                    android:progressDrawable="@drawable/blue_progressbar"
                    android:rotation="-90"
                    tools:progress="70"/>
                <!--android:indeterminateOnly="false"
                android:progressDrawable="@drawable/pink_progressbar"
                android:rotation="-90"-->

                <androidx.cardview.widget.CardView
                    android:id="@+id/imageView"
                    android:layout_width="280dp"
                    android:layout_height="280dp"
                    app:cardCornerRadius="200dp"
                    android:layout_gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" >

                    <ImageView
                        android:id="@+id/imageView_top"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/app_mainicon" />

                </androidx.cardview.widget.CardView>
            </FrameLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="24dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:text="完了"
                android:textSize="24sp"
                android:backgroundTint="#139cfc"
                android:textStyle="bold"
                android:stateListAnimator="@drawable/icon_settings"
                android:elevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameHabit" />

            <LinearLayout
                android:id="@+id/finishedComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button">

                <androidx.cardview.widget.CardView
                    android:id="@+id/iconView"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:cardCornerRadius="100dp">

                    <ImageView
                        android:id="@+id/iconSet"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:backgroundTint="#ffffff"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/icon"
                        tools:layout_editor_absoluteX="171dp"
                        tools:layout_editor_absoluteY="631dp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginBottom="5dp"
                    app:cardElevation="2dp"
                    app:cardCornerRadius="10dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/finishedCommentText"
                        android:layout_width="match_parent"
                        android:background="@color/white"
                        android:gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:backgroundTint="#00ffffff"
                        android:text="コメントを表示(30文字以内)"
                        android:maxLines="3"
                        android:layout_height="match_parent"/>

                </androidx.cardview.widget.CardView>

            </LinearLayout>



            <androidx.cardview.widget.CardView
                android:id="@+id/calendar_layout"
                app:cardElevation="5dp"
                app:cardCornerRadius="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="150dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/month_layout"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:orientation="horizontal"
                        tools:ignore="MissingConstraints"
                        android:gravity="center">

                        <ImageButton
                            android:id="@+id/calendar_back"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:backgroundTint="#00ffffff"
                            android:textColor="#000000"
                            android:minWidth="48dp"
                            app:srcCompat="@drawable/calendar_back"
                            android:contentDescription="@string/previousMonth" />

                        <TextView
                            android:id="@+id/month_text"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:text="Dec 2023"/>

                        <ImageButton
                            android:id="@+id/calendar_next"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#00ffffff"
                            android:textColor="#000000"
                            app:srcCompat="@drawable/calendar_next"
                            android:contentDescription="@string/nextMonth" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_weight="1"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Sun"/>

                        <TextView
                            android:layout_weight="1"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Mon"/>

                        <TextView
                            android:layout_weight="1"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Tue"/>

                        <TextView
                            android:layout_weight="1"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Wed"/>

                        <TextView
                            android:layout_weight="1"
                            android:gravity="center"
                            android:paddingEnd="2dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Thu"/>

                        <TextView
                            android:layout_weight="1"
                            android:gravity="center"
                            android:paddingEnd="6dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Fri"/>

                        <TextView
                            android:layout_weight="1"
                            android:gravity="center"
                            android:paddingEnd="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Sat"/>

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/calendar_recyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="220dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="24dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView_habit"
            ads:adSize="BANNER"
            ads:adUnitId="@string/ad_banner_habit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>